* Better logic in determining the major and minor breaks in the event that the user does not specify explicitly
* Fixed a bug in the Confidence Levels, when inf values where being generaged in the isometric log ratio calculation.
* Alterations to the theme_custom constructors, for consistency with the theme element names
* Alterations / typos fixed in documentation

ggtern 1.0.6.0
----------------------------------------------------------------
* Fixed bug in the rendering of coordinates axes, when not using any breaks or labels for the top axis
* Greately improved placement, padding and margin logic and use of grid
* Revised and greatly improved manual clippiing procedure for data outside the ternary surface
* Added theme_novar_tern function, many thanks to John Szumiloski
* Added geom_polygon_tern, and used it within geom_confidence and geom_density_tern
* Added the (heavily requested) contoured smoothing geometry, geom_interpolate_tern
* Fixed some documentation issues

ggtern 1.0.5.0
----------------------------------------------------------------
* Added convenience function theme_custom() to allow the user to control basic theme colours very easily
* Added geom_line() to the list of approved geometries.
* Fixed 'abuse of donttest' as required by CRAN

ggtern 1.0.4.0
----------------------------------------------------------------

BUG FIXES
* Fixed broken dependency between ggplot2 0.9.3.2 and ggplot 1.0.0 from find_global internal function

ggtern 1.0.3.2
----------------------------------------------------------------
* Added convenience functions, and global options for modifying the length of the ternary arrows easily.
* Added function for putting points in sequence for path plotting, see ?point.in.sequence

BUG FIXES
* Fixed broken ggsave function, which was not using the local print function.
* Fixed geom_errorbarR reference in geom_errorbarT and geom_errorbarL aesthetic check.
* Fixed some missing export functions in NAMESPACE file