@@ -6,7 +6,6 @@ Date: 2015-04-15
 Author: Nicholas Hamilton <nick@ggtern.com>
 Maintainer: Nicholas Hamilton <nick@ggtern.com>
 Description: Extends the functionality of 'ggplot2', providing the capability to plot ternary diagrams for (subset of) the 'ggplot2' geometries. Additionally, 'ggtern' has implemented several NEW geometries which are unavailable to the standard 'ggplot2' release. For further examples and documentation, please proceed to the 'ggtern' website. 
-License: GPL-2
 Depends:
   ggplot2(>= 1.0.0.0)
 Imports:
@@ -86,5 +85,4 @@ Collate:
   'theme-novar-tern.R'
   'stat-interpolate-tern.R'
   'geom-interpolate-tern.R'
-  'tern-tlr2xy.R'
   
